Bug 88811 - FILEOPEN: Drawing lines not imported from RTF
Summary: FILEOPEN: Drawing lines not imported from RTF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.5.0 target:4.4.2 target:4.3.7
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2015-01-26 14:52 UTC by Matthew Francis
Modified: 2018-12-20 14:37 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Reproducer document (578 bytes, application/rtf)
2015-02-02 21:00 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2015-01-26 14:52:50 UTC
This is split from bug 58736.
Observed on OSX 10.10/LO 4.3.0.4 and 4.4.0.2. Not observed on LO 4.2.6.3

Steps to reproduce:
1. Load the RTF file from attachment 72096 [details]

Expected result:
- Drawing lines should show the borders of a table around the imported text

Actual result:
- Most of the lines are missing
Comment 1 Matthew Francis 2015-01-26 14:54:24 UTC
Bibisect results from 43all:
 c50786b73d50e49dc6491e46957dcb0c3900cdcd is the first bad commit
commit c50786b73d50e49dc6491e46957dcb0c3900cdcd
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sun May 11 13:24:02 2014 +0000

    source-hash-54cbd46dc52c51dda1594ee090f0619a7b92d56a
    
    commit 54cbd46dc52c51dda1594ee090f0619a7b92d56a

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [752769ad0d2179e17ea0a08cc9004df7b890305b] source-hash-60c64b437c6678dd1d3fa3a6fc2b7da0480890d4
git bisect start 'latest' 'last42onmaster'
# bad: [4fcd68ce4979f85fda4568f4b419a4b41d07345f] source-hash-2c4621c87ed3a7b19de195c21494c9a381e72b2e
git bisect bad 4fcd68ce4979f85fda4568f4b419a4b41d07345f
# good: [0d4c20a601a3cfff27d6685d0e81463086bd9d74] source-hash-f1b1e73227471192682d303a58618ca8bd65a74d
git bisect good 0d4c20a601a3cfff27d6685d0e81463086bd9d74
# good: [3c72d6d27e2a0c420f74941355400b0834c550bb] source-hash-c30677731c55688c764a669ecea1b1c4d17ae57d
git bisect good 3c72d6d27e2a0c420f74941355400b0834c550bb
# skip: [c70dac3423c13ae0c425212ed71f0e7503555c5a] source-hash-1f74a3ce201bad68f160584900285e2c087ab2c0
git bisect skip c70dac3423c13ae0c425212ed71f0e7503555c5a
# bad: [6738b3ad82bbc77ce9a788be07da490e530de3ff] source-hash-43fc67adcc3bdc5efaaaf9b0d65e53e99880b18a
git bisect bad 6738b3ad82bbc77ce9a788be07da490e530de3ff
# bad: [4563c2121c987ab142c58f0cd6c665dd8790a8c9] source-hash-14829a84ff4f77091767cf4503db0c8a6624f036
git bisect bad 4563c2121c987ab142c58f0cd6c665dd8790a8c9
# good: [d25426a90080eae2d7a21b2258245dd1a7d28f1a] source-hash-33c7ecf870b47bdadda908834cc259ea81d69754
git bisect good d25426a90080eae2d7a21b2258245dd1a7d28f1a
# bad: [a7dc22c40cc4b6c8c0ecf73268597c873aa2543a] source-hash-f4ae06c6b558628457f3abdade1f2a705bf8b886
git bisect bad a7dc22c40cc4b6c8c0ecf73268597c873aa2543a
# good: [4cb28129efbb5aaf54b37ea5eab772c822a80298] source-hash-9bf907a8278cecd816368db7b8c4ab745a914a59
git bisect good 4cb28129efbb5aaf54b37ea5eab772c822a80298
# bad: [c50786b73d50e49dc6491e46957dcb0c3900cdcd] source-hash-54cbd46dc52c51dda1594ee090f0619a7b92d56a
git bisect bad c50786b73d50e49dc6491e46957dcb0c3900cdcd
# first bad commit: [c50786b73d50e49dc6491e46957dcb0c3900cdcd] source-hash-54cbd46dc52c51dda1594ee090f0619a7b92d56
Comment 2 Matthew Francis 2015-01-28 10:56:31 UTC
The behaviour seems to have changed as of the below commit.

Adding Cc: to zolnaitamas2000@gmail.com; Could you possibly take a look at this? Thanks


commit 6357031a3269ea191965469a8fe6867e7335e292
Author: Zolnai Tamás <tamas.zolnai@collabora.com>
Date:   Sun Feb 16 14:27:00 2014 +0100

    DOCX import: floating tables belong to the same paragraph
    
    When two floating tables were belong to the same paragraph,
    import makes one of them anchored to the other instead of
    anchorig both to the corresponding paragraph.
    
    Modifications:
    - Check the whole text range for anchored frames not
    just one point of it.
    - Save frame format's name because SwFrmFmt pointers can
    become invalid.
    
    Change-Id: Ide7c894065b619095a8e713ff0622bbea4f199b6
Comment 3 Miklos Vajna 2015-02-02 21:00:50 UTC
Created attachment 113067 [details]
Reproducer document

With ASCII-only characters and a single missing line. :-)
Comment 4 Miklos Vajna 2015-02-03 11:27:47 UTC
Ah yes, storing empty shape names into a map, then expecting that we can look them up is not a good idea.
Comment 5 Commit Notification 2015-02-03 18:37:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38f2b8b3b16aab19a2564ec699d253d3dccecc3c

tdf#88811 SwXText::convertToTextFrame: handle shapes anchored to us

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Yousuf Philips (jay) (retired) 2015-02-05 00:22:29 UTC
Thanks miklos for fixing this, hope it can also be merged into 4.4 and 4.3 if possible.
Comment 7 Miklos Vajna 2015-02-21 10:50:53 UTC
libreoffice-4-4 backport: https://gerrit.libreoffice.org/14571
Comment 8 Commit Notification 2015-02-22 10:24:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e3f0f5c3051ea982f8f753e0f3e51441e8f9496&h=libreoffice-4-4

tdf#88811 SwXText::convertToTextFrame: handle shapes anchored to us

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Miklos Vajna 2015-02-25 08:41:55 UTC
libreoffice-4-3 backport: https://gerrit.libreoffice.org/14629
Comment 10 Commit Notification 2015-02-27 12:11:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c56abb3c952e3062099d32702719825ee55b5112&h=libreoffice-4-3

tdf#88811 SwXText::convertToTextFrame: handle shapes anchored to us

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Robinson Tryon (qubit) 2015-12-17 11:07:39 UTC
Migrating Whiteboard tags to Keywords: (bibisected filter:rtf)
Remove redundant 'rtf_filter'.
[NinjaEdit]