tdf#88811 SwXText::convertToTextFrame: handle shapes anchored to us

(cherry picked from commit 38f2b8b3b16aab19a2564ec699d253d3dccecc3c)

Change-Id: Iedf8eacd37b8ed8e307a10e8ade32f53c7417c4a
Reviewed-on: https://gerrit.libreoffice.org/14571
Reviewed-by: Zolnai Tamás <zolnaitamas2000@gmail.com>
Tested-by: Zolnai Tamás <zolnaitamas2000@gmail.com>