sw/qa/extras/rtfimport/rtfimport.cxx
@@ -2111,6 +2111,14 @@ DECLARE_RTFIMPORT_TEST(testFdo82114, "fdo82114.rtf")
     CPPUNIT_ASSERT_EQUAL(aExpected, aActual);
 }
 
+DECLARE_RTFIMPORT_TEST(testTdf88811, "tdf88811.rtf")
+{
+    // The problem was that shapes anchored to the paragraph that is moved into a textframe were lost, so this was 2.
+    uno::Reference<drawing::XDrawPageSupplier> xDrawPageSupplier(mxComponent, uno::UNO_QUERY);
+    uno::Reference<drawing::XDrawPage> xDrawPage = xDrawPageSupplier->getDrawPage();
+    CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(4), xDrawPage->getCount());
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
